<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/four_logo"
            android:textColor="@color/azul_claro"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/pay_logo"
            android:textColor="@color/cinza"
            android:textSize="32sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_cartao"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desejo_cartao"
        android:textColor="@color/cinza"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:contentDescription="@string/cartao_visa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cartao_normal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debito_credito"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem1_cartoes"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:contentDescription="@string/cartao_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/internacional"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debito_credito_int"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem1_cartoes"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_azul"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/continuar"
        android:onClick="telaHome"
        android:textColor="@color/outro_branco"/>

</LinearLayout>

</ScrollView>