<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outro_branco"
    android:orientation="vertical"
    tools:context=".RecargaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:onClick="voltaHome"
                android:src="@drawable/ic_baseline_voltar"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
                android:contentDescription="@string/cd_botao_voltar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/nunito_semi"
                android:text="@string/recarga_de_celular"
                android:textColor="@color/cinza"
                android:textSize="24sp" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:lineSpacingExtra="4dp"
            android:text="@string/informe_o_numero"
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_telefone"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/numero_celular"
            android:inputType="text"
            android:textColor="@color/azul_medio"
            android:textColorHint="@color/azul_claro"
            android:textCursorDrawable="@drawable/cursor_custom"
            android:textSize="14sp"
            android:autofillHints="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_semi"
            android:lineSpacingExtra="4dp"
            android:text="@string/digite_o_valor"
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_money"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/Valor_recarga"
            android:inputType="text"
            android:textColor="@color/azul_medio"
            android:textColorHint="@color/azul_claro"
            android:textCursorDrawable="@drawable/cursor_custom"
            android:textSize="14sp"
            android:autofillHints="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_semi"
            android:lineSpacingExtra="4dp"
            android:text="@string/selecione_a_operadora"
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_seta_baixo"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/operadora"
            android:inputType="text"
            android:textColor="@color/azul_medio"
            android:textColorHint="@color/azul_claro"
            android:textCursorDrawable="@drawable/cursor_custom"
            android:textSize="14sp"
            android:autofillHints="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_semi"
            android:lineSpacingExtra="4dp"
            android:text="@string/selecione_a_forma_de_pagamento"
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_custom"
            android:drawableEnd="@drawable/ic_seta_baixo"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/pagamento"
            android:inputType="number"
            android:textColor="@color/azul_medio"
            android:textColorHint="@color/azul_claro"
            android:textCursorDrawable="@drawable/cursor_custom"
            android:textSize="14sp"
            android:autofillHints="1" />

        <android.widget.Button
            android:onClick="RecargaConfirma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:background="@drawable/btn_azul"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/continuar"
            android:textColor="@color/outro_branco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="145dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/four_logo"
            android:textColor="@color/azul_claro"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/pay_logo"
            android:textColor="@color/cinza"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>